# libmscboostpython

./: .gitignore  CMakeLists.txt  COPYING  COPYING_linked  Jenkinsfile  README.txt  version.in
src/Msc/: CMakeLists.txt
src/Msc/Boost/: Application.py  CMakeLists.txt  CompliantArgumentParser.py  EnvironmentVariable.py  FindBestMatch.py  Git.py  Log.py  Logging.py  MscProject.py  UsageException.py  __init__.py
src/MscBoost/: Application.py  CMakeLists.txt  CompliantArgumentParser.py  Conversions.py  EnvironmentVariable.py  FilePath.py  FindBestMatch.py  Git.py  Logging.py  MscProject.py  UsageException.py  Util.py  Version.py  __init__.py  log.py
src/bootstrap/: bootstrap_app.py  bootstrap_msc_boost_python.py
src/examples/: CMakeLists.txt  MyApplication.py
src/test/: CMakeLists.txt  TestHelper.py  conftest.py  pylama.ini  test_Application.py  test_Application.py.version  test_Conversions.py  test_Environment.py  test_FilePath.py  test_FindBestMatch.py  test_Git.py  test_Log.py  test_Logging.py  test_MscProject.py  test_Util.py  test_Version.py  test_log.py  test_pylama.py
src/test/Version/bad/: version.in
src/test/Version/comment/: version.in
src/test/Version/good/: version.in
src/test/Version/incomplete/: version.in
src/tests/: CMakeLists.txt  test_log.py
